# FruitShop

./:  .env.example  .gitignore  Dockerfile  Makefile  entrypoint.sh  manage.py  pyproject.toml
config/: __init__.py  asgi.py  celery.py  settings.py  urls.py
src/chat/: __init__.py  admin.py  api.py  apps.py  bot.py  consumers.py  models.py  tasks.py  tests.py  views.py
src/chat/migrations/: 0001_initial.py
src/core/: __init__.py  admin.py  apps.py  models.py  routing.py  tests.py  urls.py  views.py
src/shop/: __init__.py  admin.py  api.py  apps.py  consumers.py  models.py  routing.py  tests.py  views.py
src/shop/management/: __init__.py
src/shop/management/commands/: __init__.py  init_data.py
src/shop/migrations/: 0001_initial.py  0002_alter_product_last_operation_info.py  0002_remove_declaration_user.py  0003_alter_taskregistry_status.py
src/shop/tasks/: __init__.py  apples.py  apricots.py  bananas.py  kiwi.py  manual.py  oranges.py  peaches.py  pineapples.py  services.py  warehouse.py
src/templates/: base.html
src/templates/core/: index.html
src/templates/includes/: bank.html  chat.html  header.html  logs.html  products.html  ws_chat_message.html  ws_shop_update.html
