[tool.poetry]
package-mode = false
name = "fruitshop"
version = "0.1.0"
description = ""
authors = ["sasha <sashavipro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
django = ">=6.0.3,<7.0.0"
django-ninja = ">=1.5.3,<2.0.0"
channels = ">=4.3.2,<5.0.0"
daphne = ">=4.2.1,<5.0.0"
channels-redis = ">=4.3.0,<5.0.0"
celery = ">=5.6.2,<6.0.0"
redis = ">=7.2.1,<8.0.0"
psycopg2-binary = ">=2.9.11,<3.0.0"
django-environ = ">=0.13.0,<0.14.0"
google-genai = ">=1.66.0,<2.0.0"
django-celery-beat = "^2.9.0"
whitenoise = "^6.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"

# ==== pytest ====
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--ds=config.settings --reuse-db --import-mode=importlib"
python_files = [
    "tests.py",
    "test_*.py",
]

# ==== Coverage ====
[tool.coverage.run]
include = ["src/**"]
omit = ["*/migrations/*", "*/tests/*"]
plugins = ["django_coverage_plugin"]

# ==== mypy ====
[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = [
    "mypy_django_plugin.main",
]

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings"

# ==== djLint ====
[tool.djlint]
blank_line_after_tag = "load,extends"
close_void_tags = true
format_css = true
format_js = true
ignore = "H006,H030,H031,T002"
include = "H017,H035"
indent = 2
max_line_length = 119
profile = "django"

[tool.djlint.css]
indent_size = 2

[tool.djlint.js]
indent_size = 2

# ==== Ruff ====
[tool.ruff]
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg", ".mypy_cache",
    ".nox", ".pants.d", ".pytype", ".ruff_cache", ".svn", ".tox", ".venv",
    "__pypackages__", "_build", "buck-out", "build", "dist", "node_modules",
    "venv", "*/migrations/*.py", "staticfiles/*", "manage.py", "settings.py",
    "config/*",
]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = [
  "F", "E", "W", "C90", "I", "N", "UP", "YTT", "ASYNC", "D", "S", "BLE",
  "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "DJ", "EM", "EXE", "FA", 'ISC',
  "ICN", "G", 'INP', 'PIE', "T20", 'PYI', 'PT', "Q", "RSE", "RET", "SLF",
  "SLOT", "SIM", "TID", "TCH", "INT", "PTH", "ERA", "PD", "PGH", "PL",
  "TRY", "FLY", "PERF", "RUF"
]
ignore = [
  "S101", "RUF012", "SIM102", "UP038", "D203", "D213", "COM812", "ISC001"
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
force-single-line = true
